--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    background-color: rgba(221, 199, 196);
     
 }
 
@@ -11,5 +12,5 @@ header,h1 {
     font-family: Arial, Helvetica, sans-serif;
     color:rgb(145,65,45);
     cursor: pointer;
-    margin-top: 80px;
+    margin-top: 100px;
 }
