--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,19 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgba(221, 199, 196);
+    background-color: #FFF;
     
 }
 
-header,h1 {
+header,h1, div {
     font-size: 25;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color:rgb(145,65,45);
     cursor: pointer;
     margin-top: 100px;
+}
+
+img {
+    cursor:pointer;
 }
